Action bar buttons
Added delete and settings buttons on action/tab bar, added delete functionality

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#E0E0E0</color>
     <color name="colorPrimaryDark">#BDBDBD</color>
     <color name="colorAccent">#9E9E9E</color>
 
     <color name="lightGrey">#E0E0E0</color>
     <color name="textGrey">#212121</color>
     <color name="green">#81C784</color>
+    <color name="red">#EF5350</color>
 </resources>
