--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -5,7 +5,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/lightGrey">
+    android:background="@color/lightGrey"
+    android:layout_marginTop="10dp"
+    android:alpha="10">
 
 
 
