--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
@@ -77,4 +79,54 @@
         android:src="@drawable/ic_baseline_add_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/newTaskLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/lightGrey"
+        android:paddingTop="9dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+
+
+        <EditText
+            android:id="@+id/newTask"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="New Task"
+            android:fontFamily="@font/sfprodisplay_bold"
+            android:textSize="16sp"
+            android:textColor="@color/textGrey"
+            android:layout_marginRight="80dp"
+            app:layout_constraintTop_toTopOf="@+id/newTaskLayout"
+            app:layout_constraintStart_toStartOf="@+id/newTaskLayout"
+            app:layout_constraintEnd_toEndOf="@+id/newTaskLayout"></EditText>
+
+        <TextView
+            android:id="@+id/everydayText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:fontFamily="@font/sfprodisplay_bold"
+            android:textColor="@color/textGrey"
+            android:text="Every day?"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/newTask"
+            app:layout_constraintStart_toStartOf="@id/newTaskLayout"></TextView>
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/everydayText"
+            app:layout_constraintTop_toBottomOf="@id/newTask"></CheckBox>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
