--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="textGrey">#212121</color>
     <color name="green">#81C784</color>
     <color name="red">#EF5350</color>
+    <color name="blue">#03A9F4</color>
 </resources>
