Bug fix & colour scheme
Fixed tasks not being displayed as done when app is opened, simplified colour scheme

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,6 @@
                 android:id="@+id/tabs"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="#E0E0E0"
                 android:layout_marginRight="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/settingsButton"
@@ -74,7 +73,7 @@
         android:id="@+id/newTaskLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blue"
+        android:background="@color/lightGrey"
         android:paddingTop="9dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
