--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,6 +111,7 @@
             app:layout_constraintStart_toStartOf="@id/newTaskLayout"></TextView>
 
         <CheckBox
+            android:id="@+id/everydayCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toEndOf="@id/everydayText"
