--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,6 +105,8 @@
             android:hint="New Task"
             android:fontFamily="@font/sfprodisplay_bold"
             android:textSize="16sp"
+            android:inputType="textCapSentences|textMultiLine"
+            android:maxLines="5"
             android:textColor="@color/textGrey"
             android:layout_marginRight="80dp"
             app:layout_constraintTop_toTopOf="@+id/newTaskLayout"
